# adv_mla_lab_1

./: Makefile  pyproject.toml
adv_mla_lab1/: dataset.py  features.py  plots.py
adv_mla_lab1/modeling/: predict.py  train.py
docs/: mkdocs.yml
notebooks/: 1_baseline.ipynb  2_rf.ipynb
