[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_lab1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "lab_work" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["adv_mla_lab1"]
include = ["pyproject.toml", "adv_mla_lab1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_mla_lab1"]
force-sort-within-sections = true


[tool.poetry.dependencies]
pandas = "2.2.2"
jupyterlab = "4.4.4"
scikit-learn = "1.5.1"
